set max-height for modal content to avoid overflow

--- a/client/src/styles/Modal.scss
+++ b/client/src/styles/Modal.scss
@@ -14,6 +14,7 @@
   .ReactModal__Content {
     transform: translate(-50%, -50%);
     min-width: 300px;
+    max-height: 90vh;
 
     h5 {
       margin-bottom: 1.5rem;
